feat(sidebar): Add real-time updates and isolate UI with iframe
This commit introduces two major improvements to the sidebar: real-time functionality for the Tab Manager and architectural isolation to prevent conflicts with other extensions.

**Real-time Tab Manager:**
- The Tab Manager now updates automatically when tabs are created, removed, or updated.
- This is achieved by using the `chrome.tabs.onCreated`, `onRemoved`, and `onUpdated` event listeners.
- The list only re-renders when the Tab Manager view is active, ensuring efficient performance.

**UI Isolation via Iframe:**
- To prevent CSS or JavaScript from other installed extensions from interfering with the sidebar's UI (which can cause visual bugs or console errors), the entire application has been moved into a sandboxed `<iframe>`.
- `sidebar.html` now acts as a simple host for `app.html`, which contains the actual user interface.
- `manifest.json` has been updated with the necessary `web_accessible_resources` to allow the iframe to load securely.

--- a/manifest.json
+++ b/manifest.json
@@ -31,5 +31,11 @@
     "16": "images/scraper.png",
     "48": "images/scraper.png",
     "128": "images/scraper.png"
-  }
+  },
+  "web_accessible_resources": [
+    {
+      "resources": [ "app.html" ],
+      "matches": [ "<all_urls>" ]
+    }
+  ]
 }
