--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
     "storage",
     "contextMenus",
     "scripting",
-    "tabs"
+    "tabs",
+    "activeTab"
   ],
   "host_permissions": [
     "<all_urls>"
