--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "AI-Powered Image Scraper & Prompt Generator",
-  "version": "1.0",
+  "version": "1.1.0",
   "description": "Scrape images from any website and generate creative prompts with AI.",
   "permissions": [
     "sidePanel",
@@ -15,7 +15,7 @@
     "<all_urls>"
   ],
   "background": {
-    "service_worker": "dist/background.js"
+    "service_worker": "background.js"
   },
   "side_panel": {
     "default_path": "sidebar.html"
