--- a/package.json
+++ b/package.json
@@ -3,18 +3,13 @@
   "version": "1.0.0",
   "description": "A Chrome extension that scrapes images from websites and uses AI to generate creative prompts.",
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "build": "./build.sh"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.1.3",
-    "copy-webpack-plugin": "^13.0.0"
+    "@google/generative-ai": "^0.1.3"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.243",
-    "ts-loader": "^9.4.4",
-    "typescript": "^5.2.2",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4",
-    "webpack-manifest-plugin": "^5.0.1"
+    "typescript": "^5.2.2"
   }
 }
