--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,8 @@
     "<all_urls>"
   ],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "type": "module"
   },
   "side_panel": {
     "default_path": "sidebar.html"
