--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "1.0.0",
   "description": "A Chrome extension that scrapes images from websites and uses AI to generate creative prompts.",
   "scripts": {
-    "build": "./build.sh"
+    "build": "webpack --config webpack.config.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.1.3"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.243",
-    "typescript": "^5.2.2"
+    "copy-webpack-plugin": "^13.0.0",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.2.2",
+    "webpack": "^5.99.9",
+    "webpack-cli": "^6.0.1"
   }
 }
